# video-director-lab

./: .gitignore  README.md  pyproject.toml
docs/: project-brief.md
tests/: test_environment.py  test_jianying.py  test_planner.py
video_director_lab/: __init__.py  cli.py  environment.py  jianying.py  models.py  planner.py  quality.py
