[project]
name = "video-director-lab"
version = "0.1.0"
description = "Experimental video director foundation for planning, production routing, draft generation, and quality checks."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
video-director-lab = "video_director_lab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
